--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-favicons": "^2.4.0",
     "gulp-file-include": "^2.2.2",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
@@ -43,5 +44,8 @@
     "gulp-webp": "^4.0.1",
     "webpack": "^4.44.1",
     "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "swiper": "^6.2.0"
   }
 }
