--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "homepage": "https://AlexOdnov.github.io/mitravel",
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
@@ -13,7 +14,9 @@
     "contentimg": "gulp contentImg",
     "svg": "gulp svg",
     "favicon": "gulp favicon",
-    "ie": "gulp ieTest"
+    "ie": "gulp ieTest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 3 version",
@@ -27,6 +30,7 @@
     "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.12",
     "del": "^5.1.0",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-csso": "^4.0.1",
